--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,6 +19,6 @@ jobs:
         pip install -r requirements.txt
         python -m pip install --upgrade pip
         pip install pylint
-    - name: Analysing the code with pylint
-      run: |
-        pylint $(git ls-files '*.py')
+    # - name: Analysing the code with pylint
+    #   run: |
+    #     pylint $(git ls-files '*.py')
